// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textCombineMode renders 0 1`] = `
Array [
  .c0 {
  text-combine-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders function 1`] = `
Array [
  .c0 {
  text-combine-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders invalid theme path 1`] = `
Array [
  .c0 {
  text-combine-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders negative number 1`] = `
Array [
  .c0 {
  text-combine-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-combine-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-combine-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-combine-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-combine-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-combine-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-combine-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-combine-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-combine-mode: July;
  }
}

@media April {
  .c0 {
    text-combine-mode: August;
  }
}

@media January {
  .c0 {
    text-combine-mode: September;
  }
}

@media April {
  .c0 {
    text-combine-mode: November;
  }
}

@media June {
  .c0 {
    text-combine-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-combine-mode: July;
  }
}

@media April {
  .c0 {
    text-combine-mode: August;
  }
}

@media January {
  .c0 {
    text-combine-mode: September;
  }
}

@media April {
  .c0 {
    text-combine-mode: November;
  }
}

@media June {
  .c0 {
    text-combine-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-combine-mode: January;
  }
}

@media April {
  .c0 {
    text-combine-mode: December;
  }
}

@media January {
  .c0 {
    text-combine-mode: April;
  }
}

@media April {
  .c0 {
    text-combine-mode: May;
  }
}

@media June {
  .c0 {
    text-combine-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-combine-mode: January;
  }
}

@media April {
  .c0 {
    text-combine-mode: December;
  }
}

@media January {
  .c0 {
    text-combine-mode: April;
  }
}

@media April {
  .c0 {
    text-combine-mode: May;
  }
}

@media June {
  .c0 {
    text-combine-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders postitive number 1`] = `
Array [
  .c0 {
  text-combine-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders string 1`] = `
Array [
  .c0 {
  text-combine-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textCombineMode renders valid theme path 1`] = `
Array [
  .c0 {
  text-combine-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-combine-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
